calendar layout bug solved

--- a/client/src/assets/sass/components/widgets/_eventsCalendar.scss
+++ b/client/src/assets/sass/components/widgets/_eventsCalendar.scss
@@ -39,10 +39,9 @@ $size: 3vw;
     &_body {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
 
       &_item {
-        flex: 0 0 $size - 0.25;
+        flex: 0 0 $size;
         margin: 10px 0;
         text-align: center;
 
